--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- Add these to the <head> section of your public/index.html -->
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500&family=Open+Sans+Condensed:wght@300;700&family=Taviraj:wght@400;700&display=swap" rel="stylesheet">
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Pristup odbijen</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
